samples/_failures_safe/1761644332_b4d813_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02878704.c: In function ‘main’:
./samples/SAFE/__tmp_02878704.c:149:25: error: missing terminating " character
  149 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_02878704.c:149:9: error: expected expression at end of input
  149 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_02878704.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02878704.c:149:9: error: expected declaration or statement at end of input
